--- a/mls-rs-core/Cargo.toml
+++ b/mls-rs-core/Cargo.toml
@@ -11,7 +11,9 @@ exclude = ["test_data"]
 
 
 [features]
-default = ["std", "rfc_compliant", "fast_serialize"]
+web = []
+node = []
+default = ["std", "rfc_compliant", "fast_serialize", "web"]
 arbitrary = ["std", "dep:arbitrary"]
 fast_serialize = ["mls-rs-codec/preallocate"]
 std = ["mls-rs-codec/std", "zeroize/std", "safer-ffi-gen?/std", "dep:thiserror", "serde?/std"]
@@ -23,6 +25,7 @@ serde = ["dep:serde", "zeroize/serde", "hex/serde", "dep:serde_bytes"]
 last_resort_key_package_ext = []
 
 [dependencies]
+cfg-if = "1.0.0"
 mls-rs-codec = { version = "0.5.2", path = "../mls-rs-codec", default-features = false}
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 arbitrary = { version = "1", features = ["derive"], optional = true }
