--- a/mls-rs-identity-x509/Cargo.toml
+++ b/mls-rs-identity-x509/Cargo.toml
@@ -13,7 +13,7 @@ default = ["std"]
 std = ["mls-rs-core/std", "dep:thiserror"]
 
 [dependencies]
-mls-rs-core = { path = "../mls-rs-core", default-features = false, features = ["x509", "web"], version = "0.19.0" }
+mls-rs-core = { path = "../mls-rs-core", default-features = false, features = ["x509"], version = "0.19.0" }
 maybe-async = "0.2.10"
 thiserror = { version = "1.0.40", optional = true }
 
