--- a/mls-rs-crypto-awslc/Cargo.toml
+++ b/mls-rs-crypto-awslc/Cargo.toml
@@ -10,7 +10,8 @@ license = "Apache-2.0 OR MIT"
 
 [features]
 fips = ["aws-lc-rs/fips", "dep:aws-lc-fips-sys"]
-default = ["aws-lc-rs/aws-lc-sys", "dep:aws-lc-sys"]
+non-fips = ["aws-lc-rs/aws-lc-sys", "dep:aws-lc-sys"]
+default = ["non-fips"]
 
 [dependencies]
 aws-lc-rs = { version = "=1.10.0", default-features = false, features = ["alloc"] }
