--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -82,6 +82,9 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
+      - uses: actions/setup-go@v4
+        with:
+          go-version: '>=1.18'
       - name: Rust Fmt
         run: cargo fmt --all -- --check
       - name: Clippy Full RFC Compliance
