--- a/mls-rs-provider-sqlite/Cargo.toml
+++ b/mls-rs-provider-sqlite/Cargo.toml
@@ -27,7 +27,7 @@ anyhow = "1"
 [features]
 default = ["sqlcipher-bundled"]
 
-sqlite = ["rusqlite/modern_sqlite"]
+sqlite = []
 sqlite-bundled = ["sqlite", "rusqlite/bundled"]
 sqlcipher = ["sqlite", "rusqlite/sqlcipher"]
 sqlcipher-bundled = ["sqlite", "rusqlite/bundled-sqlcipher"]
