--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -66,7 +66,6 @@ maybe-async = { version = "0.2.10" }
 # Optional dependencies
 mls-rs-provider-sqlite = { path = "../mls-rs-provider-sqlite", version = "0.14.0", default-features = false, optional = true }
 mls-rs-crypto-openssl = { path = "../mls-rs-crypto-openssl", optional = true, version = "0.11.0" }
-mls-rs-crypto-awslc = { path = "../mls-rs-crypto-awslc", optional = true, version = "0.13" }
 # TODO: https://github.com/GoogleChromeLabs/wasm-bindgen-rayon
 rayon = { version = "1", optional = true }
 arbitrary = { version = "1", features = ["derive"], optional = true }
@@ -75,6 +74,9 @@ safer-ffi-gen = { version = "0.9.2", default-features = false, optional = true }
 once_cell = { version = "1.18", optional = true }
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
 hex = { version = "^0.4.3", default-features = false, features = ["serde", "alloc"], optional = true }
+
+# Only for benchmarks
+mls-rs-crypto-awslc = { path = "../mls-rs-crypto-awslc", optional = true, version = "0.14" }
 
 # Async mode dependencies
 [target.'cfg(mls_build_async)'.dependencies]
