--- a/mls-rs-crypto-webcrypto/Cargo.toml
+++ b/mls-rs-crypto-webcrypto/Cargo.toml
@@ -17,7 +17,7 @@ zeroize = { version = "1", features = ["zeroize_derive"] }
 maybe-async = "0.2.10"
 async-trait = "0.1.74"
 js-sys = "0.3.64"
-wasm-bindgen = "0.2.87"
+wasm-bindgen = "=0.2.87"
 wasm-bindgen-futures = "0.4.37"
 serde-wasm-bindgen = "0.6"
 serde = { version = "1.0", features = ["derive"] }
