--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ members = [
     "mls-rs-provider-sqlite",
     "mls-rs-codec",
     "mls-rs-codec-derive",
+    "mls-rs-uniffi",
+    "mls-rs-uniffi/uniffi-bindgen",
 ]
 
 default-members = [
@@ -30,4 +32,5 @@ default-members = [
     "mls-rs-crypto-webcrypto",
     "mls-rs-provider-sqlite",
     "mls-rs-codec",
+    "mls-rs-uniffi",
 ]
