--- a/mls-rs-crypto-awslc/Cargo.toml
+++ b/mls-rs-crypto-awslc/Cargo.toml
@@ -12,12 +12,12 @@ license = "Apache-2.0 OR MIT"
 fips = ["aws-lc-rs/fips", "dep:aws-lc-fips-sys"]
 non-fips = ["aws-lc-rs/aws-lc-sys", "dep:aws-lc-sys"]
 post-quantum = ["aws-lc-rs/unstable", "mls-rs-core/post-quantum", "non-fips"]
-default = ["non-fips"]
+default = ["non-fips", "post-quantum"]
 
 [dependencies]
-aws-lc-rs = { version = "=1.11.1", default-features = false, features = ["alloc"] }
-aws-lc-sys = { version = "=0.23.1", optional = true }
-aws-lc-fips-sys = { version = "=0.12.15", optional = true }
+aws-lc-rs = { version = "=1.12.0", default-features = false, features = ["alloc"] }
+aws-lc-sys = { version = "=0.24.1", optional = true }
+aws-lc-fips-sys = { version = "=0.13.0", optional = true }
 mls-rs-core = { path = "../mls-rs-core", version = "0.20.0" }
 mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.12.0" }
 mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", version = "0.12.0" }
