Key Package Generation / Join API 1.x (#226)
* Fix CI (#223)

* feat(mls-rs): Verify the update path even in case of a self removal (#224)

* Fix bug where double-hitting a ciphertext deleted the whole ratchet (#228)

Co-authored-by: Marta Mularczyk <mulmarta@amazon.com>

* Work around rust < 1.78 crash (#231)

Somehow the DWARF info generated by the compiler for the
`hash`-replacement assignment is confusing to LLVM, which crashes.

By using a different form for the same operation, the compiler is happy.

* Avoid intermediate Vec in TreeKemPublic::update_hashes (#230)

[slice, slice].concat() creates an intermediate Vec, which can be
avoided by chaining updated_leaves and trailing_blanks before the first
Vec is created.

* Add API for deleting exporters (#227)

* Add API for deleting exporters

* Apply suggestions from code review

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

---------

Co-authored-by: Marta Mularczyk <mulmarta@amazon.com>
Co-authored-by: Tom Leavy <tomleavy@amazon.com>
Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

* Key package generation 1.x

* Fix clippy warnings

* Initial implementation of group join 1.x

* Add example for 1x API

* Apply suggestions from code review

* Add SigningData struct

* Fixup

* Add more tests

* Fixup

* Fixup

---------

Co-authored-by: Félix Lescaudey de Maneville <felix.maneville@gmail.com>
Co-authored-by: Marta Mularczyk <mulmarta@amazon.com>
Co-authored-by: Mike Hommey <mh-github@glandium.org>
Co-authored-by: Tom Leavy <tomleavy@amazon.com>
Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -54,7 +54,9 @@ jobs:
         run: cargo test --no-default-features --features std,test_util,non-fips  --verbose --workspace
       - name: Examples
         working-directory: mls-rs
-        run: cargo run --example basic_usage
+        run: |
+          cargo run --example basic_usage
+          cargo run --example api_1x
   AsyncBuildAndTest:
     strategy:
       matrix:
