--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -122,6 +122,10 @@ name = "basic_usage"
 required-features = []
 
 [[example]]
+name = "api_1x"
+required-features = []
+
+[[example]]
 name = "x509"
 required-features = ["x509"]
 
