--- a/mls-rs-crypto-awslc/Cargo.toml
+++ b/mls-rs-crypto-awslc/Cargo.toml
@@ -11,8 +11,8 @@ license = "Apache-2.0 OR MIT"
 [features]
 fips = ["aws-lc-rs/fips", "dep:aws-lc-fips-sys"]
 non-fips = ["aws-lc-rs/aws-lc-sys", "dep:aws-lc-sys"]
-post-quantum = ["aws-lc-rs/unstable", "mls-rs-core/post-quantum", "non-fips"]
-default = ["non-fips", "post-quantum"]
+post-quantum = ["aws-lc-rs/unstable", "mls-rs-core/post-quantum"]
+default = ["non-fips"]
 
 [dependencies]
 aws-lc-rs = { version = "=1.12.0", default-features = false, features = ["alloc"] }
