--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -13,6 +13,9 @@ jobs:
         os: [ubuntu-latest, macos-14, windows-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
+    # TODO remove after AWS-LC FIPS bindings for Kyber are fixed
+    env:
+      AWS_LC_FIPS_SYS_EXTERNAL_BINDGEN: '1'
     steps:
       - uses: actions/checkout@v3
       - uses: arduino/setup-protoc@v2
@@ -82,6 +85,9 @@ jobs:
         run: cargo test --no-default-features --lib --test '*' --features std,test_util --verbose -p mls-rs
   LintAndFormatting:
     runs-on: ubuntu-latest
+     # TODO remove after AWS-LC FIPS bindings for Kyber are fixed
+    env:
+      AWS_LC_FIPS_SYS_EXTERNAL_BINDGEN: '1'
     steps:
       - uses: actions/checkout@v3
       - uses: arduino/setup-protoc@v2
