--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -44,7 +44,10 @@ jobs:
           echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
       - name: Test Full RFC Compliance
-        run: cargo test --all-features --verbose --workspace
+        # Don't test AWS LC on all features as it makes it build both FIPS and non-FIPS versions
+        run: cargo test --all-features --verbose --workspace --exclude mls-rs-crypto-aws-lc
+        run: cargo test --verbose -p mls-rs-crypto-aws-lc --features post-quantum
+        run: cargo test --verbose -p mls-rs-crypto-aws-lc --features post-quantum,fips --no-default-features
       - name: Test Bare Bones
         run: cargo test --no-default-features --features std,test_util,non-fips  --verbose --workspace
       - name: Examples
