--- a/mls-rs-ffi/Cargo.toml
+++ b/mls-rs-ffi/Cargo.toml
@@ -17,6 +17,11 @@ sqlite = ["std", "mls-rs-provider-sqlite/sqlite"]
 sqlite-bundled = ["sqlite", "mls-rs-provider-sqlite/sqlite-bundled"]
 std = ["mls-rs/std", "safer-ffi-gen/std"]
 x509 = ["mls-rs-identity-x509"]
+psk = ["mls-rs/psk"]
+by_ref_proposal = ["mls-rs/by_ref_proposal"]
+custom_proposal = ["mls-rs/custom_proposal"]
+private_message = ["mls-rs/private_message"]
+secret_tree_access = ["mls-rs/secret_tree_access"]
 
 [dependencies]
 mls-rs = { path = "../mls-rs", version = "0.43.0", features = ["ffi"] }
