--- a/mls-rs-ffi/Cargo.toml
+++ b/mls-rs-ffi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mls-rs-ffi"
-version = "0.7.1"
+version = "0.8.0"
 edition = "2021"
 description = "Helper crate to generate FFI definitions for mls-rs"
 homepage = "https://github.com/awslabs/mls-rs"
@@ -17,6 +17,11 @@ sqlite = ["std", "mls-rs-provider-sqlite/sqlite"]
 sqlite-bundled = ["sqlite", "mls-rs-provider-sqlite/sqlite-bundled"]
 std = ["mls-rs/std", "safer-ffi-gen/std"]
 x509 = ["mls-rs-identity-x509"]
+psk = ["mls-rs/psk"]
+by_ref_proposal = ["mls-rs/by_ref_proposal"]
+custom_proposal = ["mls-rs/custom_proposal"]
+private_message = ["mls-rs/private_message"]
+secret_tree_access = ["mls-rs/secret_tree_access"]
 
 [dependencies]
 mls-rs = { path = "../mls-rs", version = "0.43.0", features = ["ffi"] }
