--- a/mls-rs-codec/Cargo.toml
+++ b/mls-rs-codec/Cargo.toml
@@ -15,16 +15,16 @@ std = ["dep:thiserror"]
 
 [dependencies]
 mls-rs-codec-derive = { version = "0.1.1", path = "../mls-rs-codec-derive" }
-thiserror = { version = "1.0.40", optional = true }
+thiserror = { version = "2.0", optional = true }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
-wasm-bindgen-test = { version = "=0.3.26", default-features = false }
+wasm-bindgen-test = { version = "0.3", default-features = false }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = { version = "=0.2.87" }
+wasm-bindgen = { version = "0.2" }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)'] }
