--- a/mls-rs-core/Cargo.toml
+++ b/mls-rs-core/Cargo.toml
@@ -27,7 +27,7 @@ post-quantum = []
 mls-rs-codec = { version = "0.5", path = "../mls-rs-codec", default-features = false}
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 arbitrary = { version = "1", features = ["derive"], optional = true }
-thiserror = { version = "1.0.40", optional = true }
+thiserror = { version = "2.0", optional = true }
 safer-ffi = { version = "0.1.7", default-features = false, optional = true }
 safer-ffi-gen = { version = "0.9.2", default-features = false, optional = true }
 maybe-async = "0.2.10"
@@ -35,7 +35,7 @@ maybe-async = "0.2.10"
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
 serde_json = { version = "^1.0", optional = true }
 hex = { version = "^0.4.3", default-features = false, features = ["alloc"] }
-itertools = { version = "0.12", optional = true }
+itertools = { version = "0.14", optional = true }
 serde_bytes = { version = "0.11", optional = true }
 
 [target.'cfg(mls_build_async)'.dependencies]
@@ -45,10 +45,10 @@ async-trait = "0.1.74"
 assert_matches = "1.5.0"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
-wasm-bindgen-test = { version = "=0.3.26", default-features = false }
+wasm-bindgen-test = { version = "0.3", default-features = false }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = { version = "=0.2.87" }
+wasm-bindgen = { version = "0.2" }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)', 'cfg(coverage_nightly)'] }
