--- a/mls-rs-identity-x509/Cargo.toml
+++ b/mls-rs-identity-x509/Cargo.toml
@@ -15,23 +15,23 @@ std = ["mls-rs-core/std", "dep:thiserror"]
 [dependencies]
 mls-rs-core = { path = "../mls-rs-core", default-features = false, features = ["x509"], version = "0.20.0" }
 maybe-async = "0.2.10"
-thiserror = { version = "1.0.40", optional = true }
+thiserror = { version = "2.0", optional = true }
 
 # Async mode dependencies
 [target.'cfg(mls_build_async)'.dependencies]
 async-trait = "0.1.74"
 
 [dev-dependencies]
-mockall = "0.12"
+mockall = "0.13"
 assert_matches = "1"
 rand = "0.8"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
-wasm-bindgen-test = { version = "=0.3.26", default-features = false }
+wasm-bindgen-test = { version = "0.3", default-features = false }
 getrandom = { version = "0.2", features = ["js"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = { version = "=0.2.87" }
+wasm-bindgen = { version = "0.2" }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)'] }
