--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -56,8 +56,8 @@ mls-rs-core = { path = "../mls-rs-core", default-features = false, version = "0.
 mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", default-features = false, version = "0.13.0", optional = true }
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 mls-rs-codec = { version = "0.5", path = "../mls-rs-codec", default-features = false}
-thiserror = { version = "1.0.40", optional = true }
-itertools = { version = "0.12.0", default-features = false, features = ["use_alloc"]}
+thiserror = { version = "2.0", optional = true }
+itertools = { version = "0.14", default-features = false, features = ["use_alloc"]}
 cfg-if = "1"
 debug_tree = { version = "0.4.0", optional = true }
 spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"] }
@@ -86,7 +86,7 @@ async-trait = "0.1.74"
 
 [target.'cfg(not(target_has_atomic = "ptr"))'.dependencies]
 portable-atomic = { version = "1.5.1", default-features = false, features = ["critical-section"] }
-portable-atomic-util = { version = "0.1.2", default-features = false, features = ["alloc"] }
+portable-atomic-util = { version = "0.2", default-features = false, features = ["alloc"] }
 spin = { version = "0.9.8", default-features = false, features = ["portable_atomic"] }
 
 [target.'cfg(mls_build_async)'.dev-dependencies]
@@ -101,7 +101,7 @@ serde = { version = "1.0", default-features = false, features = ["alloc", "deriv
 hex = { version = "^0.4.3", default-features = false, features = ["serde", "alloc"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen = { version = "=0.2.87" }
+wasm-bindgen = { version = "0.2" }
 getrandom = { version = "0.2", features = ["js", "custom"], default-features = false }
 rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
 
