--- a/.github/workflows/wasm_build.yml
+++ b/.github/workflows/wasm_build.yml
@@ -12,9 +12,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: dtolnay/rust-toolchain@stable
     - uses: nanasess/setup-chromedriver@v2
-    - uses: jetli/wasm-pack-action@v0.3.0
+    - uses: jetli/wasm-pack-action@v0.4.0
       with:
-        version: 'v0.10.3'
+        version: 'latest'
     - name: WASM mls-rs-crypto-rustcrypto
       working-directory: mls-rs-crypto-rustcrypto
       run: wasm-pack test --headless --chrome --release --features browser
