--- a/mls-rs-crypto-awslc/Cargo.toml
+++ b/mls-rs-crypto-awslc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mls-rs-crypto-awslc"
-version = "0.13.0"
+version = "0.14.0"
 edition = "2021"
 description = "AWS-LC based CryptoProvider for mls-rs"
 homepage = "https://github.com/awslabs/mls-rs"
@@ -11,14 +11,15 @@ license = "Apache-2.0 OR MIT"
 [features]
 fips = ["aws-lc-rs/fips", "dep:aws-lc-fips-sys"]
 non-fips = ["aws-lc-rs/aws-lc-sys", "dep:aws-lc-sys"]
+post-quantum = ["aws-lc-rs/unstable", "mls-rs-core/post-quantum"]
 default = ["non-fips"]
 
 [dependencies]
-aws-lc-rs = { version = "=1.10.0", default-features = false, features = ["alloc"] }
-aws-lc-sys = { version = "0.22.0", optional = true }
-aws-lc-fips-sys = { version = "0.12.0", optional = true }
+aws-lc-rs = { version = "=1.12.0", default-features = false, features = ["alloc"] }
+aws-lc-sys = { version = "=0.24.1", optional = true }
+aws-lc-fips-sys = { version = "=0.13.0", optional = true }
 mls-rs-core = { path = "../mls-rs-core", version = "0.20.0" }
-mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.11.0" }
+mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.12.0" }
 mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", version = "0.12.0" }
 mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", version = "0.13.0" }
 thiserror = "1.0.40"
@@ -28,8 +29,11 @@ maybe-async = "0.2.10"
 [dev-dependencies]
 assert_matches = "1.5.0"
 mls-rs-core = { path = "../mls-rs-core", version = "0.20.0", features = ["test_suite"] }
-mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.11.0", features = ["test_utils"] }
+mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.12.0", features = ["test_utils"] }
 futures-test = "0.3.25"
+serde = { version = "1.0", features = ["derive"] }
+hex = { version = "0.4", features = ["serde"] }
+serde_json = "1.0"
 
 [target.'cfg(mls_build_async)'.dependencies]
 async-trait = "0.1.74"
