--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -38,8 +38,8 @@ jobs:
           echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
       - run: |
-          apt-get install -y libsqlite3-dev
-        if: runner.os == 'Ubuntu'
+          sudo apt-get install -y libsqlite3-dev
+        if: runner.os == 'Linux'
       - name: Test Full RFC Compliance
         run: cargo test --all-features --verbose --workspace
       - name: Test Bare Bones
