--- a/mls-rs-crypto-webcrypto/Cargo.toml
+++ b/mls-rs-crypto-webcrypto/Cargo.toml
@@ -17,7 +17,7 @@ zeroize = { version = "1", features = ["zeroize_derive"] }
 maybe-async = "0.2.10"
 async-trait = "0.1.74"
 js-sys = "0.3.64"
-wasm-bindgen = "=0.2.100"
+wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4.37"
 serde-wasm-bindgen = "0.6"
 serde = { version = "1.0", features = ["derive"] }
@@ -27,7 +27,7 @@ const-oid = { version = "0.9", features = ["db"] }
 
 [dev-dependencies]
 mls-rs-core = { path = "../mls-rs-core", version = "0.20.0", features = ["test_suite"] }
-wasm-bindgen-test = { version = "=0.3.26", default-features = false }
+wasm-bindgen-test = { version = "0.3" }
 futures-test = "0.3.25"
 serde_json = "^1.0"
 hex = { version = "^0.4.3", features = ["serde"] }
