Export key generation during encryption, decryption of PrivateMessages. (#294)
* Export key generation for encrypt_application_message and process_incoming_message.

Used by clients to authenticate the generation to defend against in-group forgery
attacks described in https://eprint.iacr.org/2025/554. This may be accomplished
by placing the generation in the `message` or `authenticated_data` parameters of
`Group::encrypt_application_message`, as both fields are signed by the sender's
signature key. To verify, the authenticated generation MUST be checked against
the unauthenticated generation in the SenderData, which is the actual value used
to derive keys for decryption.

* Export unauthenticated key generation via ApplicationMessageDescription on decrypt.

---------

Co-authored-by: Tom Leavy <tomleavy@amazon.com>

--- a/mls-rs-ffi/Cargo.toml
+++ b/mls-rs-ffi/Cargo.toml
@@ -22,6 +22,7 @@ by_ref_proposal = ["mls-rs/by_ref_proposal"]
 custom_proposal = ["mls-rs/custom_proposal"]
 private_message = ["mls-rs/private_message"]
 secret_tree_access = ["mls-rs/secret_tree_access"]
+export_key_generation = ["mls-rs/export_key_generation"]
 
 [dependencies]
 mls-rs = { path = "../mls-rs", version = "0.51.0", features = ["ffi"] }
