--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -36,6 +36,9 @@ jobs:
           go-version: '>=1.18'
       - uses: seanmiddleditch/gha-setup-ninja@master
         if: runner.os == 'Windows'
+      - name: Setup MSVC linker
+        uses: microsoft/setup-msbuild@v2
+        if: runner.os == 'Windows'
       # TODO remove after AWS-LC FIPS bindings for Kyber are fixed
       - name: Install bindgen-cli
         run: cargo install --force --locked bindgen-cli
@@ -45,11 +48,13 @@ jobs:
           echo "OPENSSL_DIR=C:/vcpkg/packages/openssl_x64-windows-static-md" | Out-File -FilePath $env:GITHUB_ENV -Append
           curl -o C:/cacert.pem https://curl.se/ca/cacert.pem
           echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
+          echo 'RUSTFLAGS="-l crypt32"' | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
       - run: |
           sudo apt-get install -y libsqlite3-dev
         if: runner.os == 'Linux'
       - name: Test Full RFC Compliance
+        
         # Don't test AWS LC on all features as it makes it build both FIPS and non-FIPS versions
         run: cargo test --all-features --verbose --workspace --exclude mls-rs-crypto-aws-lc
       - name: Test AWS-LC provider
@@ -88,12 +93,16 @@ jobs:
           go-version: '>=1.18'
       - uses: seanmiddleditch/gha-setup-ninja@master
         if: runner.os == 'Windows'
+      - name: Setup MSVC linker
+        uses: microsoft/setup-msbuild@v2
+        if: runner.os == 'Windows'
       - run: |
           echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
           vcpkg install openssl:x64-windows-static-md sqlite3:x64-windows-static-md
           echo "OPENSSL_DIR=C:/vcpkg/packages/openssl_x64-windows-static-md" | Out-File -FilePath $env:GITHUB_ENV -Append
           curl -o C:/cacert.pem https://curl.se/ca/cacert.pem
           echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
+          echo 'RUSTFLAGS="-l crypt32"' | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
       - name: Test Async Full RFC
         run: cargo test --lib --test '*' --verbose --features test_util -p mls-rs
